Removed portfolio row 2

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+
+                    <!-- <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                                 <div class="portfolio-hover">
@@ -171,8 +172,9 @@
                                 <div class="portfolio-caption-subheading text-muted">Branding</div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                    </div> -->
+
+                    <!-- <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                                 <div class="portfolio-hover">
@@ -185,8 +187,9 @@
                                 <div class="portfolio-caption-subheading text-muted">Website Design</div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
+                    </div> -->
+
+                    <!-- <div class="col-lg-4 col-sm-6">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                                 <div class="portfolio-hover">
@@ -199,7 +202,7 @@
                                 <div class="portfolio-caption-subheading text-muted">Photography</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
