--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <!-- <div class="masthead-subheading">Welcome To Our Studio!</div> -->
+                <!-- <div class="masthead-subheading">Welcome!</div> -->
                 <div class="masthead-subheading text"> Irene Lue is a UCSD Computer Science student </div>
                 <div class="masthead-subheading text"> based in Los Angeles </div>
                 <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
@@ -59,7 +59,7 @@
                 <div class="col-lg-12">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/irene.jpg" alt="" />
-                        <!-- <h4>Larry Parker</h4> -->
+                        <!-- <h4>Irene Lue</h4> -->
                         <p class="text-muted"></p> 
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
