Added My Resume Section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li> -->
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Resume</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Resume</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -72,13 +72,13 @@
             </div> 
         </section>
 
-                <!-- Services-->
-                <section class="page-section" id="services">
+                <!-- Resume-->
+                <section class="page-section" id="resume">
                     <div class="container">
-                        <!-- <div class="text-center">
-                            <h2 class="section-heading text-uppercase">Services</h2>
+                        <div class="text-center">
+                            <h2 class="section-heading text">My Resume</h2>
                             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                        </div> -->
+                        </div>
                         <div class="row text-center">
                             <div class="col-md-4">
                                 <span class="fa-stack fa-4x">
@@ -112,7 +112,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase"> Check Out My Portfolio! </h2>
+                    <h2 class="section-heading text"> My Portfolio </h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
