--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+        <!-- Navigation bar -->
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet" type="text/css" />
+        <!-- Header -->
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet" type="text/css" />
+        <!-- About Me paragraph -->
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -42,9 +45,13 @@
         <header class="masthead">
             <div class="container">
                 <!-- <div class="masthead-subheading">Welcome!</div> -->
-                <div class="masthead-subheading text"> Irene Lue is a UCSD Computer Science student </div>
-                <div class="masthead-subheading text"> based in Los Angeles </div>
                 <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
+                <div class="masthead-heading col-lg-6 mx-auto text-center"> 
+                    <h1 style = "color:white;font-size:85%;"> Hi, I'm Irene! </h1>
+                </div>
+                <div class="masthead-subheading mx-auto"> 
+                    <h2 style = "color:white;font-size:85%;"> I design and build user interfaces! </h2>
+                </div>
             </div>
         </header>
 
@@ -52,7 +59,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text">About Irene</h2>
+                    <h1 class="section-heading text">About Irene</h1>
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
 
@@ -61,9 +68,10 @@
                         <img class="mx-auto rounded-circle" src="assets/img/team/irene.jpg" alt="" />
                         <!-- <h4>Irene Lue</h4> -->
                         <p class="text-muted"></p> 
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a> -->
+                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/irenelue"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/irenelue/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
 
