Fixed resume redirect

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger"
-                            href="https://drive.google.com/file/d/1zq9hPtPJMAn-LElyEYRfizVVvH2s1l3Z/view?usp=sharing">Resume</a>
+                            href="https://drive.google.com/file/d/1zq9hPtPJMAn-LElyEYRfizVVvH2s1l3Z/view?usp=sharing"
+                            target="_blank">Resume</a>
                     </li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
