--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
             <!-- <div class="masthead-subheading">Welcome!</div> -->
             <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
             <div class="masthead-heading col-lg-6 mx-auto text-center">
-                <h1 style="color:white;font-size:85%;"> Hi, I'm Irene! </h1>
-            </div>
-            <div class="masthead-subheading mx-auto">
-                <h2 style="color:white;font-size:85%;"> I design and build user interfaces! </h2>
+                <h1 style="color:white;font-size:100%;"> Hi, I'm Irene! </h1>
+                <div class="masthead-subheading">
+                    <h2 style="color:white;font-size:80%;"> I design and build user interfaces! </h2>
+                    <h4>Current Date and Time is <span id='date-time'></span>.</h4>
+
+                </div>
             </div>
         </div>
     </header>
@@ -359,7 +361,7 @@
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Me </h2>
                 <h3 class="section-subheading text-muted">For business inquiries, you can reach me at:
-                    irenelue.cs@gmail.com </h3>
+                    irenelue01@gmail.com </h3>
             </div>
             <form id="contactForm" name="sentMessage" novalidate="novalidate">
                 <div class="row align-items-stretch mb-5">
