--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li> -->
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger"
                             href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing"
                             target="_blank">Resume</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects.html">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -52,33 +52,33 @@
         <div class="container">
             <!-- <div class="masthead-subheading">Welcome!</div> -->
             <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a> -->
-            <div class="masthead-heading col-lg-6 mx-auto text-center">
-                <h1 style="color:white;font-size:100%;"> Hi, I'm Irene! </h1>
-                <div class="masthead-subheading">
-                    <h2 style="color:white;font-size:80%;"> I design and build user interfaces! </h2>
-                    <h4>Current Date and Time is <span id='date-time'></span>.</h4>
-
+            <div class="masthead-heading col-lg-15 mx-auto text-center">
+                <h1 style="color:white;font-size:70%;"> Welcome! </h1>
+                <div class="masthead-subheading  text-center">
+                    <!-- <h2 style="color:white;font-size:70%;"> - </h2> -->
+                    <a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none" class="clock24" id="tz24-1624089668-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles timezone" target="_blank" rel="nofollow">Time in Los Angeles, CA  </a>
+                    <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
                 </div>
             </div>
         </div>
     </header>
 
     <!-- About Me -->
-    <section class="page-section" id="team">
+    <!-- <section class="page-section" id="team">
         <div class="container">
             <div class="text-center">
                 <h1 class="section-heading text">About Irene</h1>
                 <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
-            </div>
+            <!-- </div> -->
             <!-- below 'About Irene'-->
-            <div class="col-lg-12">
+            <!-- <div class="col-lg-12">
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="assets/img/team/irene.jpg" alt="" />
                     <!-- <h4>Irene Lue</h4> -->
-                    <p class="text-muted"></p>
+                    <!-- <p class="text-muted"></p> -->
                     <!-- <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a> -->
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/irenelue"><i
+                    <!-- <a class="btn btn-dark btn-social mx-2" href="https://github.com/irenelue"><i
                             class="fab fa-github"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/irenelue/"><i
                             class="fab fa-linkedin-in"></i></a>
@@ -90,33 +90,11 @@
                             laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <!-- added extra pictures section -->
-            <div class="row">
-                <div class="col-xs-4 col-sm-5 mb-4">
-                    <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
-                </div>
-                <div class="col-md-6">
-                    <span class="fa-stack fa-2x">
-                    </span>
-                    <h4 class="my-3">Web Development</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
-                        quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-            </div>
 
-            <!-- 2nd interest-->
-            <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-
-                    <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
-                </span>
-                <h4 class="my-3">UX/UI Design</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                    architecto quo inventore harum ex magni, dicta impedit.</p>
-            </div>
+    
+            <!-- </div> -->
             <!-- 3rd interest-->
             <!-- <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -127,10 +105,8 @@
                         <h4 class="my-3">Web Security</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div> -->
-        </div>
-    </section>
-
-    <!-- Resume -->
+      <!--  </div>
+    </section> -->
 
 
     <!-- Interests -->
@@ -170,7 +146,7 @@
                 </section> -->
 
     <!-- Portfolio Grid-->
-    <section class="page-section bg-light" id="portfolio">
+    <!-- <section class="page-section bg-light" id="portfolio">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text"> Portfolio </h2>
@@ -178,7 +154,7 @@
             </div>
             <div class="row">
                 <!-- 1st proj -->
-                <div class="col-lg-4 col-sm-6 mb-4">
+                <!-- <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                             <div class="portfolio-hover">
@@ -191,9 +167,9 @@
                             <div class="portfolio-caption-subheading text-muted">Illustration</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- 2nd proj -->
-                <div class="col-lg-4 col-sm-6 mb-4">
+                <!-- <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                             <div class="portfolio-hover">
@@ -206,9 +182,9 @@
                             <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- 3rd proj -->
-                <div class="col-lg-4 col-sm-6 mb-4">
+                <!-- <div class="col-lg-4 col-sm-6 mb-4">
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
@@ -268,9 +244,9 @@
                             </div>
                         </div>
                     </div> -->
-            </div>
+            <!--</div>
         </div>
-    </section>
+    </section> -->
 
     <!-- About-->
     <!-- <section class="page-section" id="about">
@@ -356,7 +332,7 @@
         </div> -->
 
     <!-- Contact-->
-    <section class="page-section" id="contact">
+    <!-- <section class="page-section" id="contact">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Me </h2>
@@ -404,7 +380,7 @@
                 </div>
             </form>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer-->
     <footer class="footer py-4">
