--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger"
                             href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing"
@@ -56,7 +55,7 @@
                 <h1 style="color:white;font-size:70%;"> Welcome! </h1>
                 <div class="masthead-subheading  text-center">
                     <!-- <h2 style="color:white;font-size:70%;"> - </h2> -->
-                    <a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none" class="clock24" id="tz24-1624089668-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles timezone" target="_blank" rel="nofollow">Time in Los Angeles, CA  </a>
+                    <a href="//24timezones.com/Los-Angeles/time" style="font-size: 20px; text-decoration: none" class="clock24" id="tz24-1624089668-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles timezone" target="_blank" rel="nofollow">Time in Los Angeles, CA</a>
                     <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
                 </div>
             </div>
