--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Irene Lue</a></h1>
+      <h1 class="logo"><a href="index.html"> IL </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -62,6 +62,8 @@
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <!-- ======= Resume ======= -->
           <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing">Resume</a></li>
+          <!-- ======= Contact ======= -->
+          <li><a class="nav-link scrollto " href="#contact">Contact</a></li>
           <!-- ======= Team ======= -->
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- ======= Blog ======= -->
@@ -95,10 +97,15 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h3>Welcome to <strong>Tempo</strong></h3>
-      <h1>We're Creative Agency</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
+      <h1> Hi, I'm Irene! </h1>
+      <h2> I'm a recent graduate in Computer Science from UC San Diego. </h2>
+      <h2> Currently based in Los Angeles and seeking software engineering opportunities. </h2>
+      
+      <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow">Time in Los Angeles</a>
+      </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+      
+      <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
     </div>
   </section><!-- End Hero -->
 
