--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <h3>Learn More <span>About Us</span></h3>
+          <!-- <h2> About </h2> -->
+          <h3>Learn More <span>About Me</span></h3>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
@@ -127,7 +127,7 @@
               <div class="col-lg-11 col-md-6 d-flex align-items-stretch">
                 <div class="member">
                   <div class="member-img">
-                    <img src="assets/img/team/team-0.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/team/team-00.jpg" class="img-fluid" alt="">
                   
                   </div>
                 </div>
@@ -143,10 +143,10 @@
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum.
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/irenelue/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/irenelue"><i class="bi bi-github"></i></a>
+                <!-- <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a> -->
               </div>
             </p>
             <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
@@ -304,8 +304,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <h3>Check our <span>Portfolio</span></h3>
+          <!-- <h2>Portfolio</h2> -->
+          <h3>Check Out <span> My Portfolio</span></h3>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
@@ -557,7 +557,7 @@
     </section> --><!-- End F.A.Q Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container">
 
         <div class="section-title">
@@ -643,15 +643,15 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section> --><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <h3>Contact <span>Us</span></h3>
+          <!-- <h2>Contact</h2> -->
+          <h3>Contact <span>Me</span></h3>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
