--- a/index.html
+++ b/index.html
@@ -663,23 +663,23 @@
 
           <div class="col-lg-4">
             <div class="info">
-              <div class="address">
+               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
-              </div>
+                <p>Los Angeles, CA</p>
+              </div> 
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>irenelue01@gmail.com</p>
               </div>
 
-              <div class="phone">
+      <!--         <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 <p>+1 5589 55488 55s</p>
-              </div>
+              </div> -->
 
             </div>
 
