--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="nav-link scrollto " href="#contact">Contact</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
@@ -122,12 +122,15 @@
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
             </ul> -->
             <!-- added profile picture -->
-            <div class="container">
-            <div class="row">
-              <div class="col-lg-11 col-md-6 d-flex align-items-stretch">
+            <div class="container-fluid">
+            <div class="row-fluid">
+              <!-- team-00 profile picture -->
+              <!-- <div class="col-lg-11 col-md-6 d-flex align-items-stretch"> -->
+              <!-- team-0 profile picture -->
+              <div class="col-lg-8 col-md-6 mx-auto">
                 <div class="member">
-                  <div class="member-img">
-                    <img src="assets/img/team/team-00.jpg" class="img-fluid" alt="">
+                  <div class="member-img text-center">
+                    <img src="assets/img/team/team-0.jpg" class="img-fluid text-align" alt=""> 
                   
                   </div>
                 </div>
@@ -137,7 +140,7 @@
 
           </div> 
 
-          <div class="col-lg-6 pt-4 pt-lg-0">
+          <div class="col-lg-4 pt-4 pt-lg-0">
             <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
