--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
               </div>
             </div>
           </div>
-
           </div> 
 
           <div class="col-lg-4 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              Hi, I'm Irene! I'm a recent graduate student in Computer Science from UC San Diego. 
+            </p>
+            <p>
+              Hi, I'm Irene! I'm a recent graduate student in Computer Science from UC San Diego.
               <div class="social">
                 <a href="https://www.linkedin.com/in/irenelue/"><i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/irenelue"><i class="bi bi-github"></i></a>
@@ -659,7 +659,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211594.8820765097!2d-118.41657902332075!3d34.03950924470322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1624479571983!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
