--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <!-- team-00 profile picture -->
               <!-- <div class="col-lg-11 col-md-6 d-flex align-items-stretch"> -->
               <!-- team-0 profile picture -->
-              <div class="col-lg-8 col-md-6 mx-auto">
+              <div class="col-lg-8 col-md-6 d-flex align-items-stretch">
                 <div class="member">
                   <div class="member-img text-center">
                     <img src="assets/img/team/team-0.jpg" class="img-fluid text-align" alt=""> 
