--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <!-- <section id="team" class="team"> -->
+    <section id="about" class="about">  
       <div class="container">
 
         <div class="section-title">
@@ -111,33 +112,24 @@
         </div>
 
         <div class="row content">
+
           <div class="col-lg-6">
-            <!-- <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul> -->
             <!-- added profile picture -->
             <div class="container-fluid">
             <div class="row-fluid">
               <!-- team-00 profile picture -->
-              <!-- <div class="col-lg-11 col-md-6 d-flex align-items-stretch"> -->
+              <div class="col-lg-11 col-md-6 d-flex align-items-stretch">
               <!-- team-0 profile picture -->
-              <div class="col-lg-8 col-md-6 d-flex align-items-stretch">
+              <!-- <div class="col-lg-8 col-md-6 mx-auto"> -->
                 <div class="member">
                   <div class="member-img text-center">
                     <img src="assets/img/team/team-0.jpg" class="img-fluid text-align" alt=""> 
-                  
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          </div> 
+         </div> 
 
           <div class="col-lg-4 pt-4 pt-lg-0">
             <p>
@@ -148,12 +140,29 @@
               <div class="social">
                 <a href="https://www.linkedin.com/in/irenelue/"><i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/irenelue"><i class="bi bi-github"></i></a>
-                <!-- <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a> -->
               </div>
             </p>
-            <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
-          </div>
+          </div> 
+
+          <!-- 
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Amanda Jepson</h4>
+                <span>Accountant</span>
+              </div>
+            </div>
+          </div> -->
+
         </div>
 
       </div>
