testing about me pic

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="section-title">
           <!-- <h2> About </h2> -->
           <h3> About <span> Irene </span> </h3>
-          <!-- <p> I'm a recent graduate in Computer Science from UC San Diego. Currently based in Los Angeles and seeking software engineering opportunities.  </p> -->
+          <p> testing </p>
         </div>
 
         <div class="row content">
@@ -125,7 +125,7 @@
                 <div class="member">
 
                   <div class="member-img text-center">
-                    <img src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
+                    <img src="assets/img/team/team-0.jpg" class="img-fluid" alt=""> 
                   </div>
 
                 </div>
