need to work on about me

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 
          <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
             <p style="font-size:125%">
-              Hi, I'm Irene! I'm a recent graduate in Computer Science from UC San Diego. 
+              Line 1
             </p>
             <p style="font-size:125%">
-              Hi, I'm Irene! I'm a recent graduate in Computer Science from UC San Diego.
+              Line 2
               <div class="social">
                 <a href="https://www.linkedin.com/in/irenelue/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 <a href="https://github.com/irenelue" target="_blank"><i class="bi bi-github"></i></a>
