updated greeting page

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <h1> Hi, I'm Irene! </h1>
-<!--       <h2> I'm a recent graduate in Computer Science from UC San Diego. </h2>
-      <h2> Currently based in Los Angeles and seeking software engineering opportunities. </h2> -->
+      <h2> Recent Computer Science graduate from UC San Diego based in Los Angeles. </h2>
+      <h2> Aspiring product designer and web developer looking forward to expanding a career in UX design. </h2>
       <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow">Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -675,7 +675,7 @@
 
         <div class="section-title">
           <!-- <h2>Contact</h2> -->
-          <h3>Contact <span>Me</span></h3>
+          <h3>Contact <span>Irene</span></h3>
           <h4> irenelue01@gmail.com </h4>
           <p style="font-size:100%">If you'd like to work together or have any questions, <br>
             let's get in touch and I'll get back to you as soon as I can! </p>
