updated social media pages

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <h1> Hi, I'm Irene! </h1>
       <h2> Recent Computer Science graduate from UC San Diego based in Los Angeles. </h2>
-      <h2> Aspiring product designer and web developer looking forward to expanding a career in UX design. </h2>
+      <h2> Aspiring product designer and web developer who aims to create impactful experiences.  </h2>
       <i><a href="//24timezones.com/Los-Angeles/time" style="text-decoration: none" class="clock24" id="tz24-1624350208-c1137-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Los Angeles time zone" target="_blank" rel="nofollow">Time in Los Angeles</a>
       </i><script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
@@ -689,7 +689,7 @@
           <div class="email">
             <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
             <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
-            <a href="https://www.instagram.com/irenelue/" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://medium.com/@irenelue" target="_blank"><i class="bi bi-circle-fill"></i></a>
           </div>
         </div>
 
@@ -808,6 +808,9 @@
     </div>
   </footer><!-- End Footer -->
 
+  <!-- consistent buttons scrolling throughout pages -->
+  <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
+  <a href="https://github.com/irenelue" target="_blank" class="consistent-button d-flex align-items-center justify-content-center"><i class="bi bi-github"></i></a>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
