changed a lot my brain hurts. need to work on case study now

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
          <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
             <p style="font-size:120%">
-              Hi, I’m Irene! I’m a recent Computer Science graduate from UC San Diego. I’m an aspiring product designer and web developer looking forward to expanding my career in UX design. <br>
+              Hi, I'm Irene!
             </p>
             <p style="font-size:100%">
               <a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank"> View my resume here! </a>
